--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <!--bower_components -->
     <script src="bower_components/angular/angular.js"></script>
   </head>
-  <body ng-controller="contactController">
+  <body ng-controller="contactController" style="padding-top: 3px;">
 
     <!-- Start Header -->
 
