--- a/subcategoria.html
+++ b/subcategoria.html
@@ -16,11 +16,9 @@
   <link rel="stylesheet" href="stylesheets/header.css">
   <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
 </head>
-  <body ng-controller="subcategoriaController">
+  <body ng-controller="subcategoriaController" style="padding-top: 3px;">
 
     <!-- Start Header -->
-
- 
   <header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky fixed">
       <nav class="top-bar" data-topbar="">
