--- a/produtos.html
+++ b/produtos.html
@@ -18,7 +18,7 @@
   <script src="bower_components/angular/angular.js"></script>
 
 </head>
-<body ng-controller="produtosController">
+<body ng-controller="produtosController" style="padding-top: 3px;">
 
   <!-- Start Header -->
   <header class="l-header creative-layout">
