--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="menu-main-menu-container">  
 						<ul id="menu-main-menu" class="menu">
 							<li id="menu-item-1299" class="has-dropdown not-click">
-								<a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+								<a href="#" class="has-icon">LINHA DE PRODUTOS</a>
 								<ul class="sub-menu dropdown">
 									<li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
 										<a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
@@ -163,6 +163,7 @@
 									<li ng-repeat="item in categoria.filhos | limitTo: 4">
 										<div class="wd-project hvr-underline-from-center">
 											<img width="380" height="254" src="http://webliniaerp.com.br/{{ item.thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image hvr-pop" alt="" style="height: 100px; width: 100px;">
+											<br>
 											<a href="#"><h4 class="hvr-pop">{{ item.descricao_categoria }}</h4></a>
 										</div>
 									</li>
@@ -264,20 +265,26 @@
 			</ul>
 			<ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
 				<li>
-					<h2 class="block-title">Newsletter</h2>
+					<h2 class="block-title">Informativos</h2>
 					<div class="textwidget">
 						<div class="wd-newsletter">
-							Assine seu boletim informativo
+							cadastre-se para receber informações
 							<div>
-								<input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
+								<input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
 								<input type="submit" class="newslettersubmit" value="GO">
 								<ul class="inline-list">              
 									<li class="facebook">
-										<a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+									<a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
 									</li>
 									<li class="instagram">
 										<a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-									</li>                
+									</li>      
+									<li class="facebook">
+										<a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
+									</li>
+									<li class="instagram">
+										<a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
+									</li>               
 								</ul>
 							</div>
 						</div>
