--- a/linhasdeprodutos.html
+++ b/linhasdeprodutos.html
@@ -23,7 +23,7 @@
 
     <!-- Start Header -->
 
-  <header class="l-header creative-layout">
+<header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky fixed">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -42,7 +42,7 @@
           <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <a href="#" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
                   <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
                     <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
@@ -120,83 +120,89 @@
 
     <!-- Start Footer -->
     <!-- end Header -->
-<section class="wd-footer">
-  <div class="row animation-parent" data-animation-delay="180">
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-      <li>
-        <div class="textwidget">
-          <div class="widget-logo">
-            <img alt="logo" src="images/logo/logo alfa suportel .png">
-            <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
+  <section class="wd-footer">
+    <div class="row animation-parent" data-animation-delay="180">
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <div class="textwidget">
+            <div class="widget-logo">
+              <img alt="logo" src="images/logo/logo alfa suportel .png">
+              <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
+            </div>
           </div>
-        </div>
-      </li>
-    </ul>
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-      <li>
-        <h2 class="block-title">Entrar em contato</h2>
-        <div class="textwidget">
-          <div class="widget-info">
-            <ul>
-              <li>
-                <span><span>TEL:</span> (11) 2511-2233</span>
-              </li>
-              <li>
-                <span><span>TEL:</span> (11) 2511-2144</span>
-              </li>
-              <li>
-                <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
-              </li>
-              <li>
-                <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </li>
-    </ul>
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-      <li>
-        <h2 class="block-title">Newsletter</h2>
-        <div class="textwidget">
-          <div class="wd-newsletter">
-            Assine seu boletim informativo
-            <div>
-              <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
-              <input type="submit" class="newslettersubmit" value="GO">
-              <ul class="inline-list">              
-                <li class="facebook">
-                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+        </li>
+      </ul>
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <h2 class="block-title">Entrar em contato</h2>
+          <div class="textwidget">
+            <div class="widget-info">
+              <ul>
+                <li>
+                  <span><span>TEL:</span> (11) 2511-2233</span>
                 </li>
-                <li class="instagram">
-                  <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                </li>                
+                <li>
+                  <span><span>TEL:</span> (11) 2511-2144</span>
+                </li>
+                <li>
+                  <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
+                </li>
+                <li>
+                  <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
+                </li>
               </ul>
             </div>
           </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <footer class="wd-copyright">
-    <div class="row">
-      <div class="small-12 large-12 columns">
-        <div class="copyright-menu">
-          <ul id="menu-footer-menu" class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="about-us.html">Quem Somos</a></li>
-            <li><a href="contact.html">Contato</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="copyright small-12 large-12 columns">
-        <p>
-          © 2018 SDmarketingMobile All rights reserved.
-        </p>
-      </div>
+        </li>
+      </ul>
+      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <li>
+          <h2 class="block-title">Informativos</h2>
+          <div class="textwidget">
+            <div class="wd-newsletter">
+              cadastre-se para receber informações
+              <div>
+                <input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
+                <input type="submit" class="newslettersubmit" value="GO">
+                <ul class="inline-list">              
+                  <li class="facebook">
+                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li class="instagram">
+                    <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
+                  </li>      
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li class="instagram">
+                    <a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
+                  </li>               
+                </ul>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
-  </footer>
-</section>
+    <footer class="wd-copyright">
+      <div class="row">
+        <div class="small-12 large-12 columns">
+          <div class="copyright-menu">
+            <ul id="menu-footer-menu" class="menu">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="about-us.html">Quem Somos</a></li>
+              <li><a href="contact.html">Contato</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright small-12 large-12 columns">
+          <p>
+            © 2018 SDmarketingMobile All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+  </section>
     <!-- End Footer -->
     <script src="js/extras.js"></script>
     <script src="js/angular-controller/categorias-controller.js"></script>
