--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,7 @@
 <body ng-controller="produtosController" style="padding-top: 3px;">
 
   <!-- Start Header -->
-  <header class="l-header creative-layout">
+<header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky fixed">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -40,7 +40,7 @@
           <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <a href="#" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
                   <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
                     <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
@@ -72,7 +72,6 @@
       </nav>
     </div>
   </header>
-
 <!-- End Header -->
 
 <!-- Start Title Bar -->
@@ -155,20 +154,26 @@
     </ul>
     <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
       <li>
-        <h2 class="block-title">Newsletter</h2>
+        <h2 class="block-title">Informativos</h2>
         <div class="textwidget">
           <div class="wd-newsletter">
-            Assine seu boletim informativo
+            cadastre-se para receber informações
             <div>
-              <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
+              <input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
               <input type="submit" class="newslettersubmit" value="GO">
               <ul class="inline-list">              
                 <li class="facebook">
-                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="instagram">
                   <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                </li>                
+                </li>      
+                <li class="facebook">
+                  <a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li class="instagram">
+                  <a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
+                </li>               
               </ul>
             </div>
           </div>
@@ -183,7 +188,7 @@
           <ul id="menu-footer-menu" class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="about-us.html">Quem Somos</a></li>
-           <li><a href="contact.html">Contato</a></li>
+            <li><a href="contact.html">Contato</a></li>
           </ul>
         </div>
       </div>
