--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -21,7 +21,7 @@
   <!-- Start Header -->
 
  
-  <header class="l-header creative-layout">
+<header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky fixed">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -40,7 +40,7 @@
           <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <a href="#" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
                   <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
                     <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
