--- a/subcategoria.html
+++ b/subcategoria.html
@@ -14,12 +14,13 @@
   <link rel="stylesheet" href="stylesheets/app.css">
   <link rel="stylesheet" href="stylesheets/custom-style.css">
   <link rel="stylesheet" href="stylesheets/header.css">
+  <link rel="stylesheet" href="stylesheets/sections.css">
   <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
 </head>
   <body ng-controller="subcategoriaController" style="padding-top: 3px;">
 
     <!-- Start Header -->
-  <header class="l-header creative-layout">
+<header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky fixed">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -38,7 +39,7 @@
           <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <a href="#" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
                   <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
                     <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
@@ -69,7 +70,7 @@
         </section>
       </nav>
     </div>
-  </header>
+</header>
 
 
   <!-- End Header -->
@@ -78,8 +79,7 @@
 
     <section class="banner-category" style="background: url('http://webliniaerp.com.br/{{ categoria_pai.banner }}') no-repeat center center;">
       <div class="row">
-        <div class="large-12 columns p-t-70 text-left title-banner">
-          
+        <div class="large-12 columns p-t-70 text-left title-banner">          
         </div>
       </div>
     </section>
@@ -99,10 +99,10 @@
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="wd-section-project">
-            <ul class="wd-section-portfolio small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+            <ul class="wd-section-portfolio small-block-grid-1 medium-block-grid-1 large-block-grid-1">
               <li ng-repeat="item in itens">
                 <div class="wd-project hvr-underline-from-center hvr-pop">
-                  <img width="380" height="254" src="http://webliniaerp.com.br/{{ item.pth_thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
+                  <img src="http://webliniaerp.com.br/{{ item.pth_banner }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
                   <a ng-if="(item.qtd_filhos == 0)" href="produtos.html?subcategoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a>
                   <a ng-if="(item.qtd_filhos > 0)" href="subcategoria.html?categoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a>
                   <br>
@@ -118,83 +118,89 @@
 
     <!-- Start Footer -->
 
-<section class="wd-footer">
-  <div class="row animation-parent" data-animation-delay="180">
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-      <li>
-        <div class="textwidget">
-          <div class="widget-logo">
-            <img alt="logo" src="images/logo/logo alfa suportel .png">
-            <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
-          </div>
-        </div>
-      </li>
-    </ul>
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-      <li>
-        <h2 class="block-title">Entrar em contato</h2>
-        <div class="textwidget">
-          <div class="widget-info">
-            <ul>
-              <li>
-                <span><span>TEL:</span> (11) 2511-2233</span>
-              </li>
-              <li>
-                <span><span>TEL:</span> (11) 2511-2144</span>
-              </li>
-              <li>
-                <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
-              </li>
-              <li>
-                <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </li>
-    </ul>
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
-      <li>
-        <h2 class="block-title">Newsletter</h2>
-        <div class="textwidget">
-          <div class="wd-newsletter">
-            Assine seu boletim informativo
-            <div>
-              <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
-              <input type="submit" class="newslettersubmit" value="GO">
-              <ul class="inline-list">              
-                <li class="facebook">
-                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="instagram">
-                  <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                </li>                
+    <section class="wd-footer">
+      <div class="row animation-parent" data-animation-delay="180">
+        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+          <li>
+            <div class="textwidget">
+              <div class="widget-logo">
+                <img alt="logo" src="images/logo/logo alfa suportel .png">
+                <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+          <li>
+            <h2 class="block-title">Entrar em contato</h2>
+            <div class="textwidget">
+              <div class="widget-info">
+                <ul>
+                  <li>
+                    <span><span>TEL:</span> (11) 2511-2233</span>
+                  </li>
+                  <li>
+                    <span><span>TEL:</span> (11) 2511-2144</span>
+                  </li>
+                  <li>
+                    <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
+                  </li>
+                  <li>
+                    <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+          <li>
+            <h2 class="block-title">Informativos</h2>
+            <div class="textwidget">
+              <div class="wd-newsletter">
+                cadastre-se para receber informações
+                <div>
+                  <input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
+                  <input type="submit" class="newslettersubmit" value="GO">
+                  <ul class="inline-list">              
+                    <li class="facebook">
+                    <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li class="instagram">
+                      <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
+                    </li>      
+                    <li class="facebook">
+                      <a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li class="instagram">
+                      <a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
+                    </li>               
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <footer class="wd-copyright">
+        <div class="row">
+          <div class="small-12 large-12 columns">
+            <div class="copyright-menu">
+              <ul id="menu-footer-menu" class="menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about-us.html">Quem Somos</a></li>
+                <li><a href="contact.html">Contato</a></li>
               </ul>
             </div>
           </div>
+          <div class="copyright small-12 large-12 columns">
+            <p>
+              © 2018 SDmarketingMobile All rights reserved.
+            </p>
+          </div>
         </div>
-      </li>
-    </ul>
-  </div>
-  <footer class="wd-copyright">
-    <div class="row">
-      <div class="small-12 large-12 columns">
-        <div class="copyright-menu">
-          <ul id="menu-footer-menu" class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="about-us.html">Quem Somos</a></li>
-            <li><a href="contact.html">Contato</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="copyright small-12 large-12 columns">
-        <p>
-          © 2018 SDmarketingMobile All rights reserved.
-        </p>
-      </div>
-    </div>
-  </footer>
-</section>
+      </footer>
+    </section>
     <!-- End Footer -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="js/angular-controller/subcategoria-controller.js"></script>
