--- a/contact.html
+++ b/contact.html
@@ -126,6 +126,7 @@
         </div>
       </div>
     </section>
+    
     <section class="wd-section-call-to-action">
       <div class="row call-to-action">
         <div class="small-12 large-8 columns">
@@ -191,20 +192,26 @@
       </ul>
       <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
         <li>
-          <h2 class="block-title">Newsletter</h2>
+          <h2 class="block-title">Informativos</h2>
           <div class="textwidget">
             <div class="wd-newsletter">
-              Assine seu boletim informativo
+              cadastre-se para receber informações
               <div>
-                <input type="text" class="email-adress" placeholder="Seu E-mail" size="20" value="" name="email-adress">
-                <input type="submit" class="newslettersubmit" value="ENVIAR">
+                <input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
+                <input type="submit" class="newslettersubmit" value="GO">
                 <ul class="inline-list">              
                   <li class="facebook">
-                    <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li class="instagram">
                     <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                  </li>                
+                  </li>      
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li class="instagram">
+                    <a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
+                  </li>               
                 </ul>
               </div>
             </div>
