--- a/subcategoria.html
+++ b/subcategoria.html
@@ -103,9 +103,27 @@
               <li ng-repeat="item in itens">
                 <div class="wd-project hvr-underline-from-center hvr-pop">
                   <img src="http://webliniaerp.com.br/{{ item.pth_banner }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                  <a ng-if="(item.qtd_filhos == 0)" href="produtos.html?subcategoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a>
-                  <a ng-if="(item.qtd_filhos > 0)" href="subcategoria.html?categoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a>
+                  <a ng-if="(item.filhos == null)" href="produtos.html?subcategoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a>
+                  <a ng-if="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a>
                   <br>
+                </div>
+                <div class="wd-text-icon-style5 animated fadeInUp" data-animated="fadeInUp">
+                  <ul class="slider masque portfolio-grid small-block-grid-1  medium-block-grid-2 large-block-grid-4">
+                    <li ng-if="(item.filhos == null)" ng-repeat="produto in item.produtos | limitTo: 4">
+                      <div class="wd-project hvr-underline-from-center">
+                        <img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ produto.img }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image hvr-pop" alt="" style="height: 100px; width: 100px;">
+                        <br>
+                        <a href="item_produtos.html?produto={{ produto.id }}"><h4 class="hvr-pop">{{ produto.nome }}</h4></a>
+                      </div>
+                    </li>
+                    <li ng-if="(item.filhos != null)" ng-repeat="filho in item.filhos | limitTo: 4">
+                      <div class="wd-project hvr-underline-from-center">
+                        <img width="380" height="254" src="http://webliniaerp.com.br/{{ filho.pth_thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image hvr-pop" alt="" style="height: 100px; width: 100px;">
+                        <br>
+                        <a href="subcategoria.html?categoria={{ filho.id }}"><h4 class="hvr-pop">{{ filho.descricao_categoria }}</h4></a>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
               </li>
             </ul>
