--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 											<a href="{{ item.descricao_categoria }}"></a><img width="380" height="254" src="http://webliniaerp.com.br/{{ item.thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image hvr-pop" alt="" style="height: 100px; width: 100px;">
 										</a>
 											<br>
-											<a href="#"><h4 class="hvr-pop">{{ item.descricao_categoria }}</h4></a>
+											<a href="produtos.html?subcategoria={{ item.id }}"><h4 class="hvr-pop">{{ item.descricao_categoria }}</h4></a>
 										</div>
 									</li>
 								</ul>
