--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 							cadastre-se para receber informações
 							<div>
 								<input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
-								<input type="submit" class="newslettersubmit" value="GO">
+								<input type="submit" class="newslettersubmit" value="ENVIAR">
 								<ul class="inline-list">              
 									<li class="facebook">
 									<a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
